Jetty bundle / Add JAVA_OPTS configuration for the /monitor/metrics endpoint to work correctly